--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: BY Liuxw
 SEOTitle: 刘学文的博客 | BY Liuxw
 header-img: img/post-bg-desk.jpg
-email: heyliuxw@gmail.com
+email: liull19970205@163.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Liuxw, 刘学文的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
 url: "http://liulllxw.github.io"          # your host, for absolute URL
