--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Liuxw
+title: Liuxw
 SEOTitle: 刘学文的博客 | BY Liuxw
 header-img: img/post-bg-desk.jpg
 email: liull19970205@163.com
