--- a/_config.yml
+++ b/_config.yml
@@ -62,11 +62,11 @@ disqus_username: liuxuewen
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  clientID: 0c4995b0071d9631422f                            #生成的clientID
+  clientSecret: b8ea7771d86e8d3607671890124f4c1a2d0faa6c    #生成的clientSecret
+  repo: liulllxw.github.io    #仓库名称
+  owner: liulllxw    #github用户名
+  admin: liulllxw
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
