--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Liuxw
-SEOTitle: 刘学文的博客 | BY Liuxw
+SEOTitle: 刘学文的博客 | Liuxw
 header-img: img/post-bg-desk.jpg
 email: liull19970205@163.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Liuxw, 刘学文的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+keyword: "Liuxw, 刘学文的博客, liulllxw, JavaEE, Java, B/S"
 url: "http://liulllxw.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
@@ -97,18 +97,18 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
-    }
-]
+# friends: [
+#    {
+#        title: "WY",
+#        href: "http://zhengwuyang.com"
+#    },{
+#        title: "简书·BY",
+#        href: "http://www.jianshu.com/u/e71990ada2fd"
+#    },{
+#        title: "Apple",
+#        href: "https://apple.com"
+#    },{
+#        title: "Apple Developer",
+#        href: "https://developer.apple.com/"
+#    }
+# ]
