--- a/_config.yml
+++ b/_config.yml
@@ -97,18 +97,12 @@ service-worker: true
 
 
 # Friends
-# friends: [
-#    {
-#        title: "WY",
-#        href: "http://zhengwuyang.com"
-#    },{
-#        title: "简书·BY",
-#        href: "http://www.jianshu.com/u/e71990ada2fd"
-#    },{
-#        title: "Apple",
-#        href: "https://apple.com"
-#    },{
-#        title: "Apple Developer",
-#        href: "https://developer.apple.com/"
-#    }
-# ]
+friends: [
+    {
+        title: "CSDN",
+        href: "https://me.csdn.net/qq_39754721"
+    },{
+        title: "掘金",
+        href: "https://juejin.im/user/5cc260eee51d456e2b15f664"
+    }
+ ]
