--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Liuxw
 SEOTitle: 刘学文的博客 | Liuxw
-header-img: img/post-bg-desk.jpg
+header-img: img/post-bg-os-metro.jpg
 email: liull19970205@163.com
 description: "Every failure is leading towards success."
 keyword: "Liuxw, 刘学文的博客, liulllxw, JavaEE, Java, B/S"
