--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Every failure is leading towards success."
 keyword: "Liuxw, 刘学文的博客, liulllxw, JavaEE, Java, B/S"
 url: "http://liulllxw.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/liulllxw/liulllxw.github.io" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
